# GenreGuru

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: custom.md  lect.md  team_meet.md
.github/PULL_REQUEST_TEMPLATE/: deliverable_item.md
docs/: Common.tex  README.md
docs/DevelopmentPlan/: DevelopmentPlan.tex
docs/HazardAnalysis/: HazardAnalysis.tex
docs/ProblemStatementAndGoals/: ProblemStatement.tex
docs/ProjectSelection/: ProjectDesc.md  ProjectMatrix.md
docs/SRS/: SRS.tex
docs/UserGuide/: UserGuide.tex
docs/VnVPlan/: VnVPlan.tex
docs/VnVReport/: VnVReport.tex
docs/projMngmnt/: POC_Team_Contrib.tex  Rev0_Team_Contrib.tex
src/: blank_cfg.toml  client_test.py  server_test.py
src/client/: client.py  local_server.py
src/db/: db_functions.py  engine_manager.py  features_queries.py
src/featurizer/: Audio_Splitter.py  BPM_Featurizer.py  Beats_Per_Minute_Featurizer.py  Dynamic_Range_Featurizer.py  Dynamics_Test.ipynb  Instrumentalness_Featurizer.py  Key_and_Scale_Featurizer.py  RMS_Featurizer.py  Spectral_Bandwidth_Featurizer.py  Spectral_Centroid_Featurizer.py  Spectral_Contrast_Featurizer.py  Spectral_Flux_Featurizer.py  Spectral_Rolloff_Featurizer.py  featurized_music.csv  featurizer_DynamicRange  main_featurizer.py  main_featurizer_test.ipynb  main_test.py  test.csv
src/poc/: Dynamic_Programming_BPM_Spotify.ipynb  Dynamics_Test.ipynb  POCTEST_Demo.ipynb  POCTEST_librosa.py  POCTest2.py  POCTest_Spotify_BPM.py  POCTest_Spotify_TrackID.py  SpotifyTrack.py  (+4 more)
test/: get_features.py  no_pytest.py  test.csv  test_audio_features.py  test_features.py
(+76 files in other folders)
